fix dark mode

--- a/src/app/dashboard/widgets/org-widget/org-widget.component.scss
+++ b/src/app/dashboard/widgets/org-widget/org-widget.component.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   padding-left: 10px;
-  // height: 100%;
   text-align: center;
 
   &__title {
@@ -35,22 +34,19 @@
     margin-block-start: 4px;
     margin-block-end: 0px;
     padding-inline-start: 15px;
+    list-style: none;
   }
 
 }
 
   .app-widget-wrapper {
     &__tooltip {
-    //  text-align: right;
-    //  float: right;
       width: 5%
     }
   }
 
   .app-accumulation-chart{
     &__title {
-      //  text-align: right;
-      //  float: right;
         width: 95%
       }
   }
@@ -61,7 +57,7 @@
     width: -moz-available;
     width : 10%;
     font-weight: 700;
-    color: $black;
+    color: var(--text);
 }
 .orgname {
     text-align: left;
@@ -109,5 +105,5 @@
 }
 ejs-tooltip {
   display: flex;
-    width: 100%;
+  width: 100%;
 }
